--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="max-width">
             <div class="mission-content">
                 <div class="column left">
-                    <h2 class="title">Our mission</h2>
+                    <h3 class="title">Our mission</h3>
                     <p>By bringing our AI powered software to startups and businesses, we strive to guarantee that they are always ahead of the game with up to date product and service reviews and ensure that our clients don't have to rely on another platform again</p>
                 </div>
                 <div class="column right">
@@ -71,7 +71,7 @@
                     <img src="./images/goals.png" alt="">
                 </div>
                 <div class="column right">
-                    <h2 class="title">Our Vision</h2>
+                    <h3 class="title">Our Vision</h3>
                     <p>Our vision is to become a valuable long term review retrieving and modifying AI powered app, tailored to guide every entrepreneur to their purpose </p>
                 </div>
             </div>
@@ -195,7 +195,7 @@
         <div class="max-width">
             <div class="ourstory-content">
                 <div class="column left">
-                    <h2 class="title">Our Story</h2>
+                    <h3 class="title">Our Story</h3>
                     <p>I always had an interest in shopify dropshipping, so in my leisure time I started learning more about
                          it and in the process of setting up a store on shopify. In 2021, I started off with my first shopify business. 
                          But being an occasional dropshipper I faced certain issues. Manually importing reviews from other sites was a tiresome job,
@@ -253,10 +253,11 @@
                     <div class="logo">
                         <img class="logoimg" src="logo.png" alt="">
                     </div>
-                    <address class="address">address will be here
-                        <br>Lorem ipsum dolor sit amet consectetur adipisicing
-                        
-                        <br>
+                    <address class="address">
+                        ShuffleSmart, <br>
+                        Chiravarambath H, <br>
+                        Kallettumkara P.O<br>
+                        680683
                     </address>
                     <ul>
                         <div class="social-links">
