--- a/index.html
+++ b/index.html
@@ -247,10 +247,8 @@
                         <img class="logoimg" src="logo.png" alt="">
                     </div>
                     <address class="address">
-                        ShuffleSmart, <br>
-                        Chiravarambath H, <br>
-                        Kallettumkara P.O<br>
-                        680683
+                        CITTIC <br>
+                        CUSAT, <br> Kerala, <br> India <br> 682022
                     </address>
                     <ul>
                         <div class="social-links">
