--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-    <link rel="icon" type="image/png" href="assets/images/logos/logo_icon.svg" />
+    <link rel="icon" type="image/png" href="logo_icon.svg" />
 </head>
 
 <body>
