--- a/index.html
+++ b/index.html
@@ -89,99 +89,99 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
+                        <img src="./teamsimages/akshay.png" alt="">
+                        <div class="text">Akshay CJ</div>
+                        <p>Founder and CEO</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/sachin.jpg" alt="">
+                        <div class="text">Sachin Nair</div>
+                        <p>CTO</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/sidharth.jpg" alt="">
+                        <div class="text">Siddharth Shivkumar</div>
+                        <p>Product Manager</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/ajal.jpg" alt="">
+                        <div class="text">Ajal P</div>
+                        <p>Senior Backend Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/unni.jpg" alt="">
+                        <div class="text">Nandanunni A S</div>
+                        <p>Senior Frontend Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/lakshminew.jpg" alt="">
+                        <div class="text">S.Lakshmi</div>
+                        <p>Director of Sales</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/aparna.jpg" alt="">
+                        <div class="text">Aparna Nair</div>
+                        <p>Marketing</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/lakshmi.jpg" alt="">
+                        <div class="text">Lakshmi Manoj</div>
+                        <p>Sales and Onboarding associate</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/mily.jpeg" alt="">
+                        <div class="text">Apoorva S Milly</div>
+                        <p>Sales and Onboarding Associate</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/naji.jpg" alt="">
+                        <div class="text">Najid Navas</div>
+                        <p>Junior Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/" alt="">
+                        <div class="text">Swan</div>
+                        <p>Junior Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/anand.jpg" alt="">
+                        <div class="text">Anand M A</div>
+                        <p>Senior Designer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="./teamsimages/govind.jpeg" alt="">
+                        <div class="text">Govind M J</div>
+                        <p>Junior Designer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-2.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-4.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Someone name</div>
+                        <div class="text">Suhair Zain</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
