--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="max-width">
             <div class="mission-content">
                 <div class="column left">
-                    <h3 class="title">Our mission</h3>
+                    <h3 class="title">Our Mission</h3>
                     <p>By bringing our AI powered software to startups and businesses, we strive to guarantee that they are always ahead of the game with up to date product and service reviews and ensure that our clients don't have to rely on another platform again</p>
                 </div>
                 <div class="column right">
