--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 </div>
                 <div class="card">
                     <div class="box">
+                        <img src="./teamsimages/suhair.jpg" alt="">
+                        <div class="text">Suhair Zain</div>
+                        <p>VP Product</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
                         <img src="./teamsimages/sachin.jpg" alt="">
                         <div class="text">Sachin Nair</div>
                         <p>CTO</p>
@@ -178,13 +185,7 @@
                         <p>Junior Designer</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/.jpg" alt="">
-                        <div class="text">Suhair Zain</div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
+                
 
             </div>
         </div>
